# agentic-internet

./: .env.example  .gitignore  FEATURES.md  README.md  main.py  pyproject.toml  test_agent.py  test_simple_agent.py
agentic_internet/: __init__.py  __main__.py  cli.py  exceptions.py
agentic_internet/agents/: __init__.py  basic_agent.py  internet_agent.py  multi_model_serpapi.py  search_orchestrator.py  specialized_agents.py
agentic_internet/config/: __init__.py  settings.py
agentic_internet/examples/: advanced_usage.py  basic_usage.py  example_mcp_server.py  example_mcp_usage.py  multi_model_example.py  orchestrated_search_example.py
agentic_internet/tools/: __init__.py  browser_use.py  code_execution.py  mcp_integration.py  web_search.py
agentic_internet/utils/: __init__.py  model_utils.py
docs/: CLI_ENHANCEMENTS.md  MCP_INTEGRATION.md  MCP_README_SNIPPET.md
specs/: 2025-08-30_20-45Z-update-cli-based-on-current-updates.md  CODEBASE_DIAGRAM.md  FEATURES.md
tests/: test_browser_use.py  test_code_execution.py  test_exceptions.py  test_mcp_integration.py  test_model_utils.py  test_settings.py  test_web_search.py
