[project]
name = "agentic-internet"
version = "0.1.0"
description = "An intelligent agent system powered by smolagents for autonomous internet interactions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "smolagents>=0.1.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "google-search-results>=2.4.0",
    "litellm>=1.0.0",
    "dotenv>=0.9.9",
    "browser-use-sdk>=1.0.2",
    "mcp>=1.0.0",
]

[tool.rye]
managed = true


[project.scripts]
agentic-internet = "agentic_internet.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "ipython>=8.20.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (needed in tests)
    "S603",   # subprocess call - check for untrusted input
    "S607",   # start process with partial path
    "B008",   # function call in default argument (typer pattern)
    "UP007",  # use X | Y for union types (keep Optional for 3.11 compat)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"agentic_internet/tools/code_execution.py" = ["S102", "RUF012"]  # exec usage intentional; smolagents Tool pattern
"agentic_internet/agents/multi_model_serpapi.py" = ["RUF005", "RUF012", "RUF013", "RUF015", "B007"]  # smolagents Tool pattern + large orchestration file
"agentic_internet/tools/browser_use.py" = ["RUF012"]  # smolagents Tool pattern
"agentic_internet/tools/web_search.py" = ["RUF012"]  # smolagents Tool pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]
